<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ct-test</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="text1">USB</string>
	<string name="text2">SD-CARD</string>
	<string name="text3">INTERNET</string>
	<string name="text4">SATA</string>
	<string name="text5">电池</string>
	<string name="text6">时钟显示</string>
	<string name="btn1">端口测试</string>
	<string name="btn2">音频切换到 CODEC</string>
	<string name="btn3">音频切换到 SPDIF</string>
	<string name="btn4">音频切换到 HDMI</string>
	<string name="btn5">切换到 WIFI，蓝牙</string>
	<string name="btn6">卸载</string>
	
</resources>
