<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    
    >

<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/usb_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text1"
            android:textColor="#1111EE"
            android:textSize="30sp"
            />                   
		<TextView             
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             />
		<TextView
            android:id="@+id/usb1_yn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#E61A6B"
            android:textSize="30sp"
             />
		<TextView             
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             />
</LinearLayout>
<View  android:layout_height="5px" android:background="#000000"      
        android:layout_width="fill_parent"></View>
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/sdcard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text2"
            android:textColor="#1111EE"
            android:textSize="30sp"
            />                   
		<TextView             
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             />
		<TextView
            android:id="@+id/sdcard_yn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#E61A6B"
            android:textSize="30sp"
             />
		<TextView             
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             />
        
    </LinearLayout>
    <View  android:layout_height="5px" android:background="#000000"      
        android:layout_width="fill_parent"></View>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/internet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text3"
            android:textColor="#1111EE"
            android:textSize="30sp"
            />                   
		<TextView             
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            
             />
		
		<TextView
            android:id="@+id/internet_yn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#E61A6B"
            android:textSize="30sp"
             />
        <TextView             
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             />
    </LinearLayout>
    <View  android:layout_height="5px" android:background="#000000"      
        android:layout_width="fill_parent"></View>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/sata"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text4"
            android:textColor="#1111EE"
            android:textSize="30sp"
            />                   
		<TextView             
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             />
		<TextView
            android:id="@+id/sata_yn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#E61A6B"
            android:textSize="30sp"
             />
		<TextView             
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             />
       </LinearLayout>
       <View  android:layout_height="5px" android:background="#000000"      
        android:layout_width="fill_parent"></View>
           <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/battery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text5"
            android:textColor="#1111EE"
            android:textSize="30sp"
            />                   
		<TextView             
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             />
		<TextView
            android:id="@+id/battery_yn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#E61A6B"
            android:textSize="30sp"
             />
		<TextView             
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             />
       </LinearLayout>
       <View  android:layout_height="5px" android:background="#000000"      
        android:layout_width="fill_parent"></View>
       <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text6"
            android:textColor="#1111EE"
            android:textSize="30sp"
            />                   
		<TextView             
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             />
		<TextView
            android:id="@+id/time_yn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#E61A6B"
            android:textSize="30sp"
             />
		<TextView             
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             />
       </LinearLayout>
       <View  android:layout_height="5px" android:background="#000000"      
        android:layout_width="fill_parent"></View>
  <Button
	android:id="@+id/ceshi"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/btn1"
	android:textSize="30sp"
		    />
<Button
	android:id="@+id/shift_1"
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:text="@string/btn2"
	android:textSize="30sp"
	/>

<Button
	android:id="@+id/shift_3"
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:text="@string/btn3"
	android:textSize="30sp"
	/>
<Button
	android:id="@+id/shift_4"
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content"
	android:text="@string/btn5"
	android:textSize="30sp"
	/>
</LinearLayout>
